# tree-sitter-sml

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  go.sum  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.sml  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml
bindings/c/: tree-sitter-sml.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sml/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSMLTests/: TreeSitterSMLTests.swift
common/: common.mk
examples/: mlton.txt  smlnj.txt
grammars/sml/: CMakeLists.txt  Makefile  grammar.js  package.json
grammars/sml/src/: grammar.json  node-types.json  parser.c  scanner.c
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: files.txt
test/corpus/: atomic-expressions.txt  characters.txt  comments.txt  expressions.txt  local-declarations.txt  misc.txt  numbers.txt  patterns.txt  records.txt  strings.txt  types.txt
